# None_Z-image-Turbo_trainer_Plus

./: .gitignore  CUSTOM_CHANGES.md  README.md  env.example  kill_training.bat  pyproject.toml  requirements.txt  setup.bat  start.bat  update.bat
config/: acrf_config.toml  frequency_aware_config.toml  full_finetune_config.toml  sdpa_config_example.toml  simple_config.toml  style_transfer_config.toml
configs/: 111.json  current_training.toml  default.json  zzzzzz.json
docs/: ROADMAP_Semantic_Cosine.md  TECHNICAL_PAPER.md
scripts/: convert_lora_comfyui.py  download_model.py  test_multi_gpu.py  train_acrf.py  train_multi_gpu.py  train_style_transfer.py
src/zimage_trainer/: __init__.py  acrf_trainer.py  cache_latents.py  cache_text_encoder.py  flow_matching.py  inference.py
src/zimage_trainer/dataset/: __init__.py  config_utils.py  dataloader.py
src/zimage_trainer/extensions/: __init__.py  training_extensions.py
src/zimage_trainer/losses/: __init__.py  frequency_aware_loss.py  style_structure_loss.py
src/zimage_trainer/networks/: __init__.py  lora.py  lora_split.py  lora_zimage.py
src/zimage_trainer/utils/: __init__.py  checkpoint_manager.py  degradation.py  distributed_utils.py  hardware_detector.py  latent_utils.py  memory_optimizer.py  multi_gpu_launcher.py  snr_utils.py  training_utils.py  vae_utils.py  xformers_utils.py  zimage_utils.py
webui-vue/: index.html  package-lock.json  package.json  start.bat  start.sh  vite.config.ts
webui-vue/api/: main.py  requirements.txt  server.py
webui-vue/api/core/: config.py  database.py  job_service.py  state.py
webui-vue/api/routers/: cache.py  dataset.py  generation.py  jobs.py  system.py  training.py  websocket.py
webui-vue/src/: App.vue  components.d.ts  env.d.ts  main.ts
webui-vue/src/components/: MultiGpuMonitor.vue
webui-vue/src/router/: index.ts
(+15 files in other folders)
